<resources>
    <string name="app_name">Sudoku Game</string>
    <string name="sudoku">Sudoku</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="x">X</string>
    <string name="clear">Clear</string>
    <string name="check">Check</string>
    <string name="refresh">Refresh</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="sudoku9x9">Sudoku 9x9</string>
    <string name="sudoku12x12">Sudoku 12x12</string>
    <string name="sudoku15x15">Sudoku 15x15</string>
    <string name="record_break">record break</string>
    <string name="_0_sec">0 sec</string>
    <string name="record_break_time">Your Record Time</string>
    <string name="_9x9Levels">9x9 Levels</string>
    <string name="_12x12Levels">12x12 Levels</string>
    <string name="_15x15Levels">15x15 Levels</string>
    <string name="time_00">Time : 00</string>
    <string name="about_data">Hi, I\'m Matrix.\n\nThe game \'Sudoku\', which you\'re using now is one of the most popular brain game.\n\nIn this application, we provided 3 types of Sudoku games 9x9, 12x12, 15x15.\n\nEvery game consists of 20 levels in each type of game.\n\nAfter completion of all levels, it will lock all levels again and you need to start from first.\n\nSo the game never going to end, you can play life tme.\n\n\nSerial no: 09\nDate of creation: 15 February 2022\nContact us: matrixinventions@gmail.com</string>


</resources>